welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: not found: value estSurbBiscuit
if (estSurbBiscuit) {
    ^